--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -8,7 +8,7 @@ header {
 
 	a {
 		display: inline-block;
-		padding: 9px 20px;
+		padding: 9px 0px;
 		color: white;
 		font-size: .65em;
 	}
@@ -16,6 +16,8 @@ header {
 
 .header-bottom {
 	display: flex;
+    align-items: center;
+    padding: 17px;
 }
 
 #nav-logo {
@@ -29,7 +31,6 @@ header {
     border-top: 4px solid white;
     border-left: 4px solid transparent;
     border-right: 4px solid transparent;
-    position: absolute;
-    top: 13px;
-    margin-left: 10px;
+    // position: relative;
+    padding-bottom: 200px;
 }
