--- a/css/styles.css
+++ b/css/styles.css
@@ -2,34 +2,71 @@ header {
   font-family: 'Ubuntu', sans-serif;
 }
 
-.header-top {
+.header-top-full {
   background-color: #245c4f;
-  text-align: right;
 }
 
-.header-top a {
-  display: inline-block;
-  padding: 9px 0px;
-  color: white;
-  font-size: .65em;
-}
-
-.header-bottom {
+.header-top {
   display: flex;
+  justify-content: right;
+  padding: 9px 0px;
+  font-size: .65em;
+  color: white;
+}
+
+.header-top .header-top-support-container {
+  display: inline-flex;
   align-items: center;
-  padding: 17px;
+  padding-left: 50px;
+  padding-right: 20px;
 }
 
-#nav-logo {
-  width: 120px;
-}
-
-.dropdown-toggle:after {
+.header-top .header-top-support-container .header-top-toggle {
   content: "";
   border-top: 4px solid white;
   border-left: 4px solid transparent;
   border-right: 4px solid transparent;
-  padding-bottom: 200px;
+  margin-left: 10px;
+}
+
+.header-bottom {
+  display: flex;
+  padding: 18px 15px;
+  font-size: 1em;
+  background-color: white;
+  border-bottom: solid #e6e6e6 1px;
+}
+
+.header-bottom #nav-logo {
+  width: 135px;
+  padding-right: 15px;
+}
+
+.nav-links {
+  flex: 1;
+  list-style-type: none;
+  display: flex;
+  align-items: center;
+}
+
+.nav-links li {
+  padding-left: 15px;
+  padding-right: 15px;
+  font-size: 1em;
+  color: #505050;
+}
+
+.nav-links li:hover {
+  color: black;
+}
+
+@media screen and (max-width: 900px) {
+  .header-top-full {
+    padding: 5px;
+  }
+  .header-top-container {
+    display: none;
+  }
 }
 
 * {
@@ -38,7 +75,7 @@ header {
   box-sizing: border-box;
 }
 
-.container {
-  border: solid red 3px;
-  width: 1200px;
+.row {
+  max-width: 1440px;
+  margin: auto;
 }
