--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -8,7 +8,7 @@
     box-sizing: border-box;
 }
 
-.container {
-    border: solid red 3px;
-    width: 1200px;
+.row {
+	max-width: 1440px;
+	margin: auto;
 }
