--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -2,77 +2,129 @@ header {
 	font-family: 'Ubuntu', sans-serif;
 }
 
-.header-top-full {
+.header-top {
 	background-color: $green;
 }
 
-.header-top {
+.header-top-content {
 	display: flex;
 	justify-content: right;
 	padding: 9px 0px;
 	font-size: .65em;
 	color: white;
+	text-align: right;
 
-	.header-top-support-container {
-		display: inline-flex;
+	a {
+		display: flex;
 		align-items: center;
+	}
+
+	.header-top-support {
 		padding-left: 50px;
 		padding-right: 20px;
-
-		.header-top-toggle {
-			content: "";
-			border-top: 4px solid white;
-			border-left: 4px solid transparent;
-			border-right: 4px solid transparent;
-			margin-left: 10px;
-		}
-	}
-}
-
-.header-bottom {
-	display: flex;
-	// justify-content: center;
-	// align-items: center;
-	padding: 18px 15px;
-	font-size: 1em;
-	background-color: white;
-	border-bottom: solid rgb(230, 230, 230) 1px;;
-
-	#nav-logo {
-		width: 135px;
-		padding-right: 15px
-	}
-}
-
-.nav-links {
-	flex: 1;
-	list-style-type: none;
-	display: flex;
-	align-items: center;
-
-	li {
-		// vertical-align: middle;
-		// height: 50%;
-		padding-left: 15px;
-		padding-right: 15px;
-		font-size: 1em;
-		color: rgb(80, 80, 80);
 	}
 
-	li:hover {
-		color: black;
+	.header-top-support::after {
+		content: "";
+		border-top: 4px solid white;
+		border-left: 4px solid transparent;
+		border-right: 4px solid transparent;
+		margin-left: 10px;
 	}
 }
 
 
+// .header-bottom {
+// 	display: flex;
+// 	font-size: 1em;
+// 	background-color: white;
+// 	border-bottom: solid rgb(230, 230, 230) 1px;
 
-@media screen and (max-width: 900px) {
+// 	.header-bottom-nav-logo-container {
+// 		display: flex;
+// 		align-items: center;
 
-	.header-top-full {
+// 		#nav-logo {
+// 			width: 120px;
+// 			margin: 0px 20px;
+// 		}
+// 	}
+
+// 	.header-bottom-nav-links {
+// 		flex: 1;
+// 		display: flex;
+// 		align-items: center;
+// 		margin-right: 1px;
+	
+// 		a {
+// 			position: relative;
+// 			margin: 0px 12px;
+// 			padding: 30px 0px;
+// 			font-size: 1em;
+// 			color: black;
+// 			cursor: pointer;
+// 			white-space: nowrap;
+// 		}
+	
+// 		a::after {
+// 			content: '';
+// 			display: block;
+// 			position: absolute;
+// 			bottom: 0;
+// 			width: 0;
+// 			height: 1px;
+// 			background: $green;
+// 			transition: width .2s;
+// 		}
+	
+// 		a:hover::after {
+// 			width: 100%;
+// 		}
+// 	}
+
+// 	.header-bottom-search {
+// 		border-left: solid rgb(230, 230, 230) 1px;
+// 		border-right: solid rgb(230, 230, 230) 1px;
+
+// 		form {
+
+// 			display: flex;
+// 			justify-content: center;
+
+// 			input {
+// 				font-family: 'Ubuntu', sans-serif;
+// 				border: none;
+// 			}
+
+// 			.header-bottom-search-button {
+// 				background-image: url(/img/search-icon.png);
+// 				background-color: white;
+// 				border: none;
+
+// 				img {
+// 					width: 20px;
+// 				}
+// 			}
+// 		}
+
+// 	}
+
+// 	.header-bottom-account-cart {
+// 		display: flex;
+// 	}
+
+// }
+
+
+
+@media screen and (max-width: 1020px) {
+
+	.header-top {
 		padding: 5px;
 	}
 
-	.header-top-container {
+	.header-top-content {
 		display: none;
 	}
+
 }
