--- a/css/styles.css
+++ b/css/styles.css
@@ -26,11 +26,119 @@ header {
 }
 
 .header-top-content .header-top-support::after {
-  content: "";
+  content: '';
   border-top: 4px solid white;
   border-left: 4px solid transparent;
   border-right: 4px solid transparent;
   margin-left: 10px;
+}
+
+.header-top-content .header-top-support:hover::after {
+  border-top: none;
+  border-bottom: 4px solid white;
+}
+
+.header-bottom {
+  border-bottom: solid #e6e6e6 1px;
+}
+
+.header-bottom-content {
+  display: flex;
+  padding: 0px 17px;
+}
+
+.header-bottom-content .header-bottom-column-1 {
+  display: flex;
+  align-items: center;
+}
+
+.header-bottom-content .header-bottom-column-1 #header-logo {
+  width: 118px;
+  margin-right: 20px;
+}
+
+.header-bottom-content .header-bottom-column-2 {
+  display: flex;
+  align-items: center;
+  flex: 1;
+}
+
+.header-bottom-content .header-bottom-column-2 a {
+  position: relative;
+  margin: 0px 12px;
+  padding: 30px 0px;
+  cursor: pointer;
+  white-space: nowrap;
+}
+
+.header-bottom-content .header-bottom-column-2 a::after {
+  content: '';
+  display: block;
+  position: absolute;
+  bottom: 0;
+  width: 0;
+  height: 1px;
+  background: #245c4f;
+  transition: width .2s;
+}
+
+.header-bottom-content .header-bottom-column-2 a:hover::after {
+  width: 100%;
+}
+
+.header-bottom-content .header-bottom-column-3 {
+  display: flex;
+  align-items: center;
+  border-left: solid #e6e6e6 1px;
+  border-right: solid #e6e6e6 1px;
+  padding: 0px 20px;
+}
+
+.header-bottom-content .header-bottom-column-3 .header-search-form {
+  display: flex;
+  justify-content: center;
+}
+
+.header-bottom-content .header-bottom-column-3 .header-search-form .header-search-input {
+  width: 60px;
+  font-family: 'Ubuntu', sans-serif;
+  font-size: .8em;
+  border: none;
+}
+
+.header-bottom-content .header-bottom-column-3 .header-search-form .header-search-button {
+  width: 25px;
+  height: 25px;
+  background-color: white;
+  border: none;
+}
+
+.header-bottom-content .header-bottom-column-3 .header-search-form .header-search-button img {
+  width: 100%;
+}
+
+.header-bottom-content .header-bottom-column-4 {
+  display: flex;
+  align-items: center;
+  padding: 20px;
+}
+
+.header-bottom-content .header-bottom-column-4 .header-bottom-button {
+  width: 40px;
+  height: 40px;
+  background-color: white;
+  border: none;
+  margin: 0px 10px;
+}
+
+.header-bottom-content .header-bottom-column-4 #account-button {
+  background: url("/img/account-icon.png") no-repeat center;
+  background-size: 30px;
+}
+
+.header-bottom-content .header-bottom-column-4 #cart-button {
+  background: url("/img/cart-icon.png") no-repeat center;
+  background-size: 30px;
 }
 
 @media screen and (max-width: 1020px) {
@@ -38,6 +146,9 @@ header {
     padding: 5px;
   }
   .header-top-content {
+    display: none;
+  }
+  #header-nav-links {
     display: none;
   }
 }
