Updated header navbar

--- a/css/styles.css
+++ b/css/styles.css
@@ -44,26 +44,25 @@ header {
 
 .header-bottom-content {
   display: flex;
-  padding: 0px 17px;
 }
 
-.header-bottom-content .header-bottom-column-1 {
+.header-bottom-column-1 {
   display: flex;
   align-items: center;
 }
 
-.header-bottom-content .header-bottom-column-1 #header-logo {
+#header-logo {
   width: 118px;
   margin-right: 20px;
 }
 
-.header-bottom-content .header-bottom-column-2 {
+.header-bottom-column-2 {
   display: flex;
   align-items: center;
   flex: 1;
 }
 
-.header-bottom-content .header-bottom-column-2 a {
+.header-bottom-column-2 a {
   position: relative;
   margin: 0px 12px;
   padding: 30px 0px;
@@ -71,7 +70,7 @@ header {
   white-space: nowrap;
 }
 
-.header-bottom-content .header-bottom-column-2 a::after {
+.header-bottom-column-2 a::after {
   content: '';
   display: block;
   position: absolute;
@@ -82,63 +81,85 @@ header {
   transition: width .2s;
 }
 
-.header-bottom-content .header-bottom-column-2 a:hover::after {
+.header-bottom-column-2 a:hover::after {
   width: 100%;
 }
 
-.header-bottom-content .header-bottom-column-3 {
+.header-bottom-column-3 {
   display: flex;
   align-items: center;
+  padding: 0px 20px;
   border-left: solid #e6e6e6 1px;
   border-right: solid #e6e6e6 1px;
-  padding: 0px 20px;
 }
 
-.header-bottom-content .header-bottom-column-3 .header-search-form {
+.header-search-form {
   display: flex;
-  justify-content: center;
 }
 
-.header-bottom-content .header-bottom-column-3 .header-search-form .header-search-input {
-  width: 60px;
+.header-search-input {
+  flex: 1;
   font-family: 'Ubuntu', sans-serif;
   font-size: .8em;
   border: none;
+  width: 60px;
+  transition: width .3s;
 }
 
-.header-bottom-content .header-bottom-column-3 .header-search-form .header-search-button {
-  width: 25px;
-  height: 25px;
-  background-color: white;
+.header-search-input:focus {
+  width: 120px;
+  outline: none;
+}
+
+.header-search-button {
+  background-image: url("/img/search.png");
+  background-size: cover;
+  width: 20px;
+  height: 20px;
   border: none;
+  background-color: white;
+  cursor: pointer;
 }
 
-.header-bottom-content .header-bottom-column-3 .header-search-form .header-search-button img {
-  width: 100%;
-}
-
-.header-bottom-content .header-bottom-column-4 {
+.header-bottom-column-4 {
   display: flex;
   align-items: center;
-  padding: 20px;
+  position: relative;
 }
 
-.header-bottom-content .header-bottom-column-4 .header-bottom-button {
-  width: 40px;
-  height: 40px;
-  background-color: white;
+.header-bottom-column-4 .header-button {
+  background-size: cover;
   border: none;
-  margin: 0px 10px;
+  background-color: white;
+  margin: 0px 15px;
 }
 
-.header-bottom-content .header-bottom-column-4 #account-button {
-  background: url("/img/account-icon.png") no-repeat center;
-  background-size: 30px;
+.header-bottom-column-4 .header-account-button {
+  background-image: url("/img/account.png");
+  width: 27px;
+  height: 27px;
 }
 
-.header-bottom-content .header-bottom-column-4 #cart-button {
-  background: url("/img/cart-icon.png") no-repeat center;
-  background-size: 30px;
+.header-bottom-column-4 .header-account-button::after {
+  content: '';
+  border-top: 4px solid black;
+  border-left: 4px solid transparent;
+  border-right: 4px solid transparent;
+  position: absolute;
+  left: 55px;
+}
+
+.header-bottom-column-4 .header-account-button:hover::after {
+  border-top: none;
+  border-bottom: 4px solid black;
+}
+
+.header-bottom-column-4 .header-cart-button {
+  background-image: url("/img/cart.png");
+  width: 27px;
+  height: 27px;
+  cursor: pointer;
+  margin-left: 30px;
 }
 
 @media screen and (max-width: 1020px) {
