--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -43,104 +43,123 @@ header {
 }
 
 .header-bottom-content {
-
 	display: flex;
-	padding: 0px 17px;
+}
 
-	.header-bottom-column-1 {
-		display: flex;
-		align-items: center;
-		
-		#header-logo {
-			width: 118px;
-			margin-right: 20px;
-		}
-	}
-		
-	.header-bottom-column-2 {
-		display: flex;
-		align-items: center;
-		flex: 1;
-
-		a {
-			position: relative;
-			margin: 0px 12px;
-			padding: 30px 0px;
-			cursor: pointer;
-			white-space: nowrap;
-		}
+.header-bottom-column-1 {
+	display: flex;
+	align-items: center;
+}
 	
-		a::after {
-			content: '';
-			display: block;
-			position: absolute;
-			bottom: 0;
-			width: 0;
-			height: 1px;
-			background: $green;
-			transition: width .2s;
-		}
-	
-		a:hover::after {
-			width: 100%;
-		}
+#header-logo {
+	width: 118px;
+	margin-right: 20px;
+}
+
+.header-bottom-column-2 {
+	display: flex;
+	align-items: center;
+	flex: 1;
+
+	a {
+		position: relative;
+		margin: 0px 12px;
+		padding: 30px 0px;
+		cursor: pointer;
+		white-space: nowrap;
 	}
 
-	.header-bottom-column-3 {
-		display: flex;
-		align-items: center;
-		border-left: solid rgb(230, 230, 230) 1px;
-		border-right: solid rgb(230, 230, 230) 1px;
-		padding: 0px 20px;
+	a::after {
+		content: '';
+		display: block;
+		position: absolute;
+		bottom: 0;
+		width: 0;
+		height: 1px;
+		background: $green;
+		transition: width .2s;
+	}
+
+	a:hover::after {
+		width: 100%;
+	}
+}
+
+.header-bottom-column-3 {
+	display: flex;
+	align-items: center;
+	padding: 0px 20px;
+	border-left: solid rgb(230, 230, 230) 1px;
+	border-right: solid rgb(230, 230, 230) 1px;
+}
+
+.header-search-form {
+	display: flex;
+}
+
+.header-search-input {
+	flex: 1;
+	font-family: 'Ubuntu', sans-serif;
+	font-size: .8em;
+	border: none;
+	width: 60px;
+	transition: width .3s;
+}
+
+.header-search-input:focus {
+	width: 120px;
+	outline: none;
+}
+
+.header-search-button {
+	background-image: url('/img/search.png');
+	background-size: cover;
+	width: 20px;
+	height: 20px;
+	border: none;
+	background-color: white;
+	cursor: pointer;
+}
+
+.header-bottom-column-4 {
+	display: flex;
+	align-items: center;
+	position: relative;
+
+	.header-button {
+		background-size: cover;
+		border: none;
+		background-color: white;
+		margin: 0px 15px;
+	}
+
+	.header-account-button {
+		background-image: url('/img/account.png');
+		width: 27px;
+		height: 27px;
+	}
+
+	.header-account-button::after {
+		content: '';
+		border-top: 4px solid black;
+		border-left: 4px solid transparent;
+		border-right: 4px solid transparent;
+		position: absolute;
+		left: 55px;
 		
-		.header-search-form {
-			display: flex;
-			justify-content: center;
-			
-			.header-search-input {
-				width: 60px;
-				font-family: 'Ubuntu', sans-serif;
-				font-size: .8em;
-				border: none;
-			}
-			
-			.header-search-button {
-				width: 25px;
-				height: 25px;
-				background-color: white;
-				border: none;
-				
-				img {
-					width: 100%;
-				}
-			}
-		}
 	}
 
-	.header-bottom-column-4 {
+	.header-account-button:hover::after {
+		border-top: none;
+		border-bottom: 4px solid black;
+	}
 
-		display: flex;
-		align-items: center;
-		padding: 20px;
-
-		.header-bottom-button {
-			width: 40px;
-			height: 40px;
-			background-color: white;
-			border: none;
-			margin: 0px 10px;
-		}
-
-		#account-button {
-			background: url('/img/account-icon.png') no-repeat center;
-			background-size: 30px;
-		}
-
-		#cart-button {
-			background: url('/img/cart-icon.png') no-repeat center;
-			background-size: 30px;
-		}
-
+	.header-cart-button {
+		background-image: url('/img/cart.png');
+		width: 27px;
+		height: 27px;
+		cursor: pointer;
+		margin-left: 30px;
 	}
 }
 
