Added to media queries for header

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,6 @@
 header {
   font-family: 'Ubuntu', sans-serif;
+  overflow: hidden;
 }
 
 .header-top {
@@ -44,6 +45,15 @@ header {
 .header-bottom-content {
   display: flex;
   padding: 0px 20px;
+}
+
+.header-hamburger {
+  display: none;
+}
+
+.header-hamburger img {
+  width: 20px;
+  height: 20px;
 }
 
 .header-bottom-column-1 {
@@ -162,14 +172,34 @@ header {
   margin-left: 30px;
 }
 
-@media screen and (max-width: 1020px) {
+@media screen and (max-width: 1150px) {
   .header-top {
     padding: 5px;
   }
   .header-top-content {
     display: none;
   }
-  #header-nav-links {
+  .header-bottom-content {
+    padding-top: 10px;
+    padding-bottom: 10px;
+  }
+  .header-bottom-column-1 {
+    justify-content: center;
+  }
+  .header-hamburger {
+    display: flex;
+    align-items: center;
+  }
+  .header-bottom-column-1 {
+    flex: 1;
+  }
+  .header-bottom-column-2 {
+    display: none;
+  }
+  .header-bottom-column-3 {
+    display: none;
+  }
+  .header-account-button {
     display: none;
   }
 }
@@ -183,4 +213,8 @@ header {
 .slim-row {
   max-width: 1440px;
   margin: auto;
+}
+
+.hide {
+  display: none;
 }
