--- a/css/styles.css
+++ b/css/styles.css
@@ -1,86 +1,135 @@
-header {
-  font-family: 'Ubuntu', sans-serif;
-  overflow: hidden;
+.header-button {
+  width: 25px;
+  height: 25px;
+  background-size: cover;
+  background-position: center;
+  background-color: white;
+  border: none;
+  cursor: pointer;
 }
 
-.header-top {
-  background-color: #245c4f;
-}
-
-.header-top-content {
-  display: flex;
-  justify-content: flex-end;
-  padding: 9px 0px;
-  font-size: .65em;
-  color: white;
-}
-
-.header-top-content a {
-  display: flex;
-  align-items: center;
-}
-
-.header-top-content .header-top-support {
-  padding-left: 50px;
-  padding-right: 20px;
-}
-
-.header-top-content .header-top-support::after {
-  content: '';
-  border-top: 4px solid white;
-  border-left: 4px solid transparent;
-  border-right: 4px solid transparent;
-  margin-left: 10px;
-}
-
-.header-top-content .header-top-support:hover::after {
-  border-top: none;
-  border-bottom: 4px solid white;
-}
-
-.header-bottom {
-  border-bottom: solid #e6e6e6 1px;
-}
-
-.header-bottom-content {
-  display: flex;
-  padding: 0px 20px;
-}
-
-.header-hamburger {
+#header-menu-button {
   display: none;
+  cursor: pointer;
 }
 
-.header-hamburger img {
+#header-menu-button img {
   width: 20px;
   height: 20px;
 }
 
-.header-bottom-column-1 {
+.header-search-button {
+  background-image: url("/img/icons/search.png");
+  width: 20px;
+  height: 20px;
+}
+
+.header-account-button {
+  background-image: url("/img/icons/account.png");
+}
+
+.header-account-button::after {
+  content: '';
+  border-top: 4px solid black;
+  border-left: 4px solid transparent;
+  border-right: 4px solid transparent;
+  position: absolute;
+  left: 55px;
+}
+
+.header-account-button:hover::after {
+  border-top: none;
+  border-bottom: 4px solid black;
+}
+
+.header-cart-button {
+  background-image: url("/img/icons/cart.png");
+  margin-left: 50px;
+}
+
+@media screen and (max-width: 1150px) {
+  #header-menu-button {
+    display: flex;
+    align-items: center;
+  }
+  .header-account-button {
+    display: none;
+  }
+  .header-cart-button {
+    margin-left: 0px;
+  }
+}
+
+.header-banner {
+  background-color: #245c4f;
+}
+
+.header-banner-content {
+  font-family: 'Ubuntu', sans-serif;
+  font-size: .66rem;
+  text-align: right;
+  padding: 9px 20px;
+  color: white;
+}
+
+#header-support {
+  padding-left: 45px;
+  padding-right: 15px;
+}
+
+#header-support::after {
+  content: '';
+  border-top: 4px solid white;
+  border-left: 4px solid transparent;
+  border-right: 4px solid transparent;
+  position: absolute;
+  top: 13px;
+  margin-left: 7px;
+}
+
+#header-support:hover::after {
+  border-top: none;
+  border-bottom: 4px solid white;
+}
+
+.header-nav {
+  border-bottom: solid #e6e6e6 1px;
+  font-family: 'Ubuntu', sans-serif;
+}
+
+.header-nav-content {
+  display: flex;
+  height: 80px;
+  padding: 0px 15px;
+}
+
+.header-nav-content > div {
   display: flex;
   align-items: center;
 }
 
-#header-logo {
-  width: 118px;
-  margin-right: 20px;
+.header-nav-logo > img {
+  width: 120px;
 }
 
-.header-bottom-column-2 {
-  display: flex;
-  align-items: center;
+#header-nav-links {
   flex: 1;
+  margin-left: 30px;
 }
 
-.header-bottom-column-2 a {
+.header-nav-link {
   position: relative;
-  margin: 0px 12px;
-  padding: 30px 0px;
+  display: inline-flex;
+  align-items: center;
+  font-size: .95rem;
+  font-weight: 600;
+  height: 100%;
   cursor: pointer;
   white-space: nowrap;
+  margin: 0px 12px;
 }
 
-.header-bottom-column-2 a::after {
+.header-nav-link::after {
   content: '';
   display: block;
   position: absolute;
@@ -91,13 +140,11 @@ header {
   transition: width .2s;
 }
 
-.header-bottom-column-2 a:hover::after {
+.header-nav-link:hover::after {
   width: 100%;
 }
 
-.header-bottom-column-3 {
-  display: flex;
-  align-items: center;
+#header-nav-search {
   padding: 0px 20px;
   border-left: solid #e6e6e6 1px;
   border-right: solid #e6e6e6 1px;
@@ -105,10 +152,10 @@ header {
 
 .header-search-form {
   display: flex;
+  align-items: center;
 }
 
 .header-search-input {
-  flex: 1;
   font-family: 'Ubuntu', sans-serif;
   font-size: .8em;
   border: none;
@@ -121,86 +168,36 @@ header {
   outline: none;
 }
 
-.header-search-button {
-  background-image: url("/img/search.png");
-  background-size: cover;
-  width: 20px;
-  height: 20px;
-  border: none;
-  background-color: white;
-  cursor: pointer;
-}
-
-.header-bottom-column-4 {
-  display: flex;
-  align-items: center;
+.header-nav-account {
   position: relative;
+  padding: 0px 20px;
 }
 
-.header-bottom-column-4 .header-button {
-  background-size: cover;
-  border: none;
-  background-color: white;
-  margin: 0px 15px;
-}
-
-.header-bottom-column-4 .header-account-button {
-  background-image: url("/img/account.png");
-  width: 27px;
-  height: 27px;
-}
-
-.header-bottom-column-4 .header-account-button::after {
-  content: '';
-  border-top: 4px solid black;
-  border-left: 4px solid transparent;
-  border-right: 4px solid transparent;
-  position: absolute;
-  left: 55px;
-}
-
-.header-bottom-column-4 .header-account-button:hover::after {
-  border-top: none;
-  border-bottom: 4px solid black;
-}
-
-.header-bottom-column-4 .header-cart-button {
-  background-image: url("/img/cart.png");
-  width: 27px;
-  height: 27px;
-  cursor: pointer;
-  margin-left: 30px;
+@media screen and (max-width: 1220px) {
+  .header-search-input {
+    max-width: 60px;
+  }
 }
 
 @media screen and (max-width: 1150px) {
-  .header-top {
+  .header-banner-content {
     padding: 5px;
   }
-  .header-top-content {
+  .header-banner-content > * {
     display: none;
   }
-  .header-bottom-content {
-    padding-top: 10px;
-    padding-bottom: 10px;
-  }
-  .header-bottom-column-1 {
+  .header-nav-logo {
+    flex: 1;
     justify-content: center;
   }
-  .header-hamburger {
-    display: flex;
-    align-items: center;
-  }
-  .header-bottom-column-1 {
-    flex: 1;
-  }
-  .header-bottom-column-2 {
+  #header-nav-links {
     display: none;
   }
-  .header-bottom-column-3 {
+  #header-nav-search {
     display: none;
   }
-  .header-account-button {
-    display: none;
+  .header-nav-account {
+    padding: 0px 0px;
   }
 }
 
@@ -213,8 +210,17 @@ header {
 .slim-row {
   max-width: 1440px;
   margin: auto;
+  overflow: hidden;
 }
 
 .hide {
   display: none;
+}
+
+.even-columns {
+  display: flex;
+}
+
+.even-columns > * {
+  width: 100%;
 }
