--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -1,103 +1,89 @@
-header {
-	font-family: 'Ubuntu', sans-serif;
-	overflow: hidden;
-}
-
-.header-top {
+.header-banner {
 	background-color: $green;
 }
 
-.header-top-content {
-	display: flex;
-	justify-content: flex-end;
-	padding: 9px 0px;
-	font-size: .65em;
+.header-banner-content {
+	font-family: 'Ubuntu', sans-serif;
+	font-size: .66rem;
+	text-align: right;
+	padding: 9px 20px;
 	color: white;
-
-	a {
-		display: flex;
-		align-items: center;
-	}
-
-	.header-top-support {
-		padding-left: 50px;
-		padding-right: 20px;
-	}
-
-	.header-top-support::after {
-		content: '';
-		border-top: 4px solid white;
-		border-left: 4px solid transparent;
-		border-right: 4px solid transparent;
-		margin-left: 10px;
-	}
-
-	.header-top-support:hover::after {
-		border-top: none;
-		border-bottom: 4px solid white;
-	}
 }
 
-.header-bottom {
+#header-support {
+	padding-left: 45px;
+	padding-right: 15px;
+}
+
+#header-support::after {
+	content: '';
+	border-top: 4px solid white;
+	border-left: 4px solid transparent;
+	border-right: 4px solid transparent;
+	position: absolute;
+	top: 13px;
+	margin-left: 7px;
+}
+
+#header-support:hover::after {
+	border-top: none;
+	border-bottom: 4px solid white;
+}
+
+.header-nav {
 	border-bottom: solid rgb(230, 230, 230) 1px;
+	font-family: 'Ubuntu', sans-serif;
 }
 
-.header-bottom-content {
+.header-nav-content {
 	display: flex;
-    padding: 0px 20px;
+	height: 80px;
+	padding: 0px 15px;
 }
 
-.header-hamburger {
-	display: none;
-
-	img {
-		width: 20px;
-		height: 20px;
-	}
-}
-
-.header-bottom-column-1 {
+.header-nav-content > div {
 	display: flex;
 	align-items: center;
+}
+
+.header-nav-logo > img {
+	width: 120px;
+}
+
+#header-nav-links {
+	flex: 1;
+	margin-left: 30px;
+}
+
+.header-nav-link {
+	position: relative;
+	display: inline-flex;
+	align-items: center;
+	font-size: .95rem;
+	font-weight: 600;
+	height: 100%;
+	cursor: pointer;
+	white-space: nowrap;
+	margin: 0px 12px;
 }
 	
-#header-logo {
-	width: 118px;
-	margin-right: 20px;
+.header-nav-link::after {
+	content: '';
+	display: block;
+	position: absolute;
+	bottom: 0;
+	width: 0;
+	height: 1px;
+	background: $green;
+	transition: width .2s;
 }
 
-.header-bottom-column-2 {
-	display: flex;
-	align-items: center;
-	flex: 1;
-
-	a {
-		position: relative;
-		margin: 0px 12px;
-		padding: 30px 0px;
-		cursor: pointer;
-		white-space: nowrap;
-	}
-
-	a::after {
-		content: '';
-		display: block;
-		position: absolute;
-		bottom: 0;
-		width: 0;
-		height: 1px;
-		background: $green;
-		transition: width .2s;
-	}
-
-	a:hover::after {
-		width: 100%;
-	}
+.header-nav-link:hover::after {
+	width: 100%;
 }
 
-.header-bottom-column-3 {
-	display: flex;
-	align-items: center;
+
+#header-nav-search {
 	padding: 0px 20px;
 	border-left: solid rgb(230, 230, 230) 1px;
 	border-right: solid rgb(230, 230, 230) 1px;
@@ -105,10 +91,10 @@ header {
 
 .header-search-form {
 	display: flex;
+	align-items: center;
 }
 
 .header-search-input {
-	flex: 1;
 	font-family: 'Ubuntu', sans-serif;
 	font-size: .8em;
 	border: none;
@@ -121,97 +107,41 @@ header {
 	outline: none;
 }
 
-.header-search-button {
-	background-image: url('/img/search.png');
-	background-size: cover;
-	width: 20px;
-	height: 20px;
-	border: none;
-	background-color: white;
-	cursor: pointer;
-}
-
-.header-bottom-column-4 {
-	display: flex;
-	align-items: center;
+.header-nav-account {
 	position: relative;
-
-	.header-button {
-		background-size: cover;
-		border: none;
-		background-color: white;
-		margin: 0px 15px;
-	}
-
-	.header-account-button {
-		background-image: url('/img/account.png');
-		width: 27px;
-		height: 27px;
-	}
-
-	.header-account-button::after {
-		content: '';
-		border-top: 4px solid black;
-		border-left: 4px solid transparent;
-		border-right: 4px solid transparent;
-		position: absolute;
-		left: 55px;
-		
-	}
-
-	.header-account-button:hover::after {
-		border-top: none;
-		border-bottom: 4px solid black;
-	}
-
-	.header-cart-button {
-		background-image: url('/img/cart.png');
-		width: 27px;
-		height: 27px;
-		cursor: pointer;
-		margin-left: 30px;
-	}
+	padding: 0px 20px;
 }
 
+@media screen and (max-width: 1220px) {
+	.header-search-input {
+		max-width: 60px;
+	}
+}
 
 @media screen and (max-width: 1150px) {
-
-	.header-top {
+	.header-banner-content {
 		padding: 5px;
 	}
 
-	.header-top-content {
+	.header-banner-content > * {
 		display: none;
 	}
 
-	.header-bottom-content {
-		padding-top: 10px;
-		padding-bottom: 10px;
-	}
-
-	.header-bottom-column-1 {
+	.header-nav-logo {
+		flex: 1;
 		justify-content: center;
 	}
 
-	.header-hamburger {
-		display: flex;
-		align-items: center;
-	}
-
-	.header-bottom-column-1 {
-		flex: 1;
-	}
-
-	.header-bottom-column-2 {
+	#header-nav-links {
 		display: none;
 	}
 
-	.header-bottom-column-3 {
+	#header-nav-search {
 		display: none;
 	}
 
-	.header-account-button {
-		display: none;
+	.header-nav-account {
+		padding: 0px 0px;
 	}
 
 }
