--- a/scss/_colors.scss
+++ b/scss/_colors.scss
@@ -1,4 +1,5 @@
 $green: rgb(36, 92, 79);
+$dark-green: rgb(26, 69, 59);
 $tan: rgb(251, 251, 249);
 $dark-tan: rgb(237, 234, 224);
 $yellow: rgb(185, 153, 83);
