--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -4,9 +4,9 @@
 
 .header-banner-content {
 	font-family: 'Ubuntu', sans-serif;
-	font-size: .66rem;
+	font-size: .69rem;
 	text-align: right;
-	padding: 9px 20px;
+	padding: 8px 20px 9px 20px;
 	color: white;
 }
 
@@ -30,10 +30,9 @@
 	border-bottom: 4px solid white;
 }
 
-.header-nav {
-	border-bottom: solid rgb(230, 230, 230) 1px;
-	font-family: 'Ubuntu', sans-serif;
-}
+// .header-nav {
+// 	 border-bottom: solid rgb(230, 230, 230) 1px;
+// }
 
 .header-nav-content {
 	display: flex;
@@ -59,6 +58,7 @@
 	position: relative;
 	display: inline-flex;
 	align-items: center;
+	font-family: 'Ubuntu', sans-serif;
 	font-size: .95rem;
 	font-weight: 600;
 	height: 100%;
