--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -20,8 +20,47 @@
 
 .even-columns {
 	display: flex;
+	height: 720px;
 }
 
 .even-columns > * {
 	width: 100%;
+}
+
+.even-column-img {
+	background-image: url('/img/photos/customShop.jpg');
+	background-size: cover;
+	background-position: center;	
+}
+
+.even-column-info {
+	display: flex;
+	flex-direction: column;
+	font-family: 'Fjalla One', sans-serif;
+	font-size: 1.75rem;
+	text-transform: uppercase;
+	background-color: black;
+	color: white;
+}
+
+
+
+.column-info {
+	max-width: 700px;
+	padding: 150px 40px 0px 50px;
+
+	h1 {
+		letter-spacing: 2px;
+	}
+
+	p {
+		font-size: 1.1rem;
+		letter-spacing: 1px;
+		line-height: 1.7rem;
+		margin-top: 5px;
+		margin-bottom:20px;
+	}
+
+	
+
 }
