--- a/scss/_buttons.scss
+++ b/scss/_buttons.scss
@@ -60,6 +60,17 @@
 	background-color: $dark-green;
 }
 
+.carousel-button {
+	width: 20px;
+	margin: 0px 2px;
+	border: solid white 1px;
+	cursor: pointer;
+}
+
+.carousel-button:hover {
+	border-color: $green;
+}
+
 @media screen and (max-width: 1150px) {
 	#header-menu-button {
 		display: flex;
